Bug 1949415 - Move color inputs off-screen. r=dwalker,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D238939

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -1024,6 +1024,7 @@
      margin: 0;
      position: absolute;
      pointer-events: none;
+     top: -100px;
   }
 
   .tab-group-editor-swatch {
